# ner: src/Makefile.am

bin_PROGRAMS = ner
ner_SOURCES = \
	main.cc \
	ner.cc ner.hh \
	config_file.cc config_file.hh \
	util.cc util.hh \
	colors.hh \
	notmuch.cc notmuch.hh \
	status_bar.cc status_bar.hh \
	view_manager.cc view_manager.hh \
	input_handler.cc input_handler.hh \
	view.cc view.hh \
	window_view.cc window_view.hh \
	search_view.cc search_view.hh \
	thread_view.cc thread_view.hh

